--- a/sample-template/complete.html
+++ b/sample-template/complete.html
@@ -4,7 +4,7 @@
     <title>Basic template</title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <script src="https://browserid.org/include.js" type="text/javascript" data-butter-exclude></script>
-    <script src="../src/butter.js" data-butter-exclude /></script>
+    <script src="https://popcornmaker-dev.allizom.org/static/dist/butter.min.js" data-butter-exclude /></script>
     <script type="text/javascript" src="complete.js" data-butter-exclude /></script>
     <style>
         #main, .content-div {
@@ -34,8 +34,8 @@
 </head>
 <body>
     <video id="main" data-butter="media" controls>
-      <source src="/static/external/popcorn-js/test/trailer.ogv"></source>
-      <source src="/static/external/popcorn-js/test/trailer.mp4"></source>
+      <source src="https://popcornmaker-dev.allizom.org/static/external/popcorn-js/test/trailer.ogv"></source>
+      <source src="https://popcornmaker-dev.allizom.org/static/external/popcorn-js/test/trailer.mp4"></source>
     </video>
     <div class="container-div">
         <div class="content-div" data-butter="target" id="Area1"></div>
